# api_anoninbox

./: .gitignore  README.md  design.md  lesson_learned.md  manage.py  pyproject.toml
anoninbox/: db.sqlite3  settings.py  vercel.json
anoninbox/anoninbox/: asgi.py  settings.py  urls.py  wsgi.py
anoninbox/anoninbox/middleware/: request_log.py
anoninbox/api/: models.py  permissions.py  serializers.py  urls.py  views.py
anoninbox/api/migrations/: 0001_initial.py  0003_alter_box_box_description_and_more.py  0004_thread_delete_reply.py  0005_remove_message_message_box_message_thread.py  0007_alter_message_message_title.py  0008_alter_message_thread.py  0009_message_is_author_box_maker.py
anoninbox/users/: managers.py  models.py  serializers.py  urls.py  views.py
anoninbox/users/migrations/: 0001_initial.py  0003_alter_userverification_user.py  0004_delete_userverification.py  0007_userverification.py
api/: models.py  urls.py  views.py
api/migrations/: 0002_box_created_at_box_updated_at_message_created_at_and_more.py  0006_remove_message_message_author.py  0010_alter_box_box_description.py
api/templates/emails/: new-message.html  new-reply-to-sender.html
users/: serializers.py  urls.py  views.py
users/migrations/: 0002_userverification.py  0005_userverification.py  0006_delete_userverification.py
users/templates/emails/: password-reset.html  user-verification.html
